fix(metrics): keep benchmark Java 8 compatible
Signed-off-by: Steven Zeng <szeng2@atlassian.com>